src/prisma2/parser/index.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Schema: peg$parseSchema },
      peg$startRuleFunction  = peg$parseSchema,

      peg$c0 = function(blocks) {
        return {
          type:"schema",
          blocks: blocks
        }
      },
      peg$c1 = function(block) {
        return block
      },
      peg$c2 = "type",
      peg$c3 = peg$literalExpectation("type", false),
      peg$c4 = "=",
      peg$c5 = peg$literalExpectation("=", false),
      peg$c6 = function(name, datatype, attributes) {
        return {
          type: "type_alias",
          name: name,
          datatype: datatype,
          attributes: attributes
        }
      },
      peg$c7 = "model",
      peg$c8 = peg$literalExpectation("model", false),
      peg$c9 = "{",
      peg$c10 = peg$literalExpectation("{", false),
      peg$c11 = "}",
      peg$c12 = peg$literalExpectation("}", false),
      peg$c13 = function(name, properties) {
        return {
          type: "model",
          name: name,
          properties: properties
        }
      },
      peg$c14 = function(property) {
        return property
      },
      peg$c15 = "datasource",
      peg$c16 = peg$literalExpectation("datasource", false),
      peg$c17 = function(name, assignments) {
        return {
          type: "datasource",
          name: name,
          assignments: assignments
        }
      },
      peg$c18 = "generator",
      peg$c19 = peg$literalExpectation("generator", false),
      peg$c20 = function(name, assignments) {
        return {
          type: "generator",
          name: name,
          assignments: assignments
        }
      },
      peg$c21 = "enum",
      peg$c22 = peg$literalExpectation("enum", false),
      peg$c23 = function(name, enumerators) {
        return {
          type: "enum",
          name: name,
          enumerators: enumerators,
          attributes: []
        }
      },
      peg$c24 = "@@",
      peg$c25 = peg$literalExpectation("@@", false),
      peg$c26 = ".",
      peg$c27 = peg$literalExpectation(".", false),
      peg$c28 = function(group, name, args) {
        return {
          type: "attribute",
          group: group,
          name: name,
          arguments: args || []
        }
      },
      peg$c29 = function(name, args) {
        return {
          type: "attribute",
          name: name,
          arguments: args || []
        }
      },
      peg$c30 = function(name, value) {
        return {
          type: "enumerator",
          name: name,
          value: value
        }
      },
      peg$c31 = function(value) {
        return value
      },
      peg$c32 = function(assignment) {
        return assignment
      },
      peg$c33 = function(key, value) {
        return {
          type: "assignment",
          key: key,
          value: value
        }
      },
      peg$c34 = function(name, datatype, attributes) {
        return {
          type: "field",
          name: name,
          datatype: datatype,
          attributes: attributes
        }
      },
      peg$c35 = /^[A-Za-z]/,
      peg$c36 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
      peg$c37 = /^[_A-Za-z0-9]/,
      peg$c38 = peg$classExpectation(["_", ["A", "Z"], ["a", "z"], ["0", "9"]], false, false),
      peg$c39 = function(head, tail) {
        return [head].concat(tail).join('')
      },
      peg$c40 = function(group, name) {
        return {
          type: "group_type",
          group: group,
          name: name,
        }
      },
      peg$c41 = "?",
      peg$c42 = peg$literalExpectation("?", false),
      peg$c43 = function(inner) {
        return {
          type: "optional_type",
          inner: inner
        }
      },
      peg$c44 = "[]",
      peg$c45 = peg$literalExpectation("[]", false),
      peg$c46 = function(inner) {
        return {
          type: "list_type",
          inner: inner
        }
      },
      peg$c47 = "String",
      peg$c48 = peg$literalExpectation("String", false),
      peg$c49 = "Float",
      peg$c50 = peg$literalExpectation("Float", false),
      peg$c51 = "Int",
      peg$c52 = peg$literalExpectation("Int", false),
      peg$c53 = "DateTime",
      peg$c54 = peg$literalExpectation("DateTime", false),
      peg$c55 = "Boolean",
      peg$c56 = peg$literalExpectation("Boolean", false),
      peg$c57 = function(name) {
        return {
          type: "named_type",
          name: name
        }
      },
      peg$c58 = function(name) {
        return {
          type:"reference_type",
          name: name
        }
      },
      peg$c59 = function(attr) {
        return attr
      },
      peg$c60 = "@",
      peg$c61 = peg$literalExpectation("@", false),
      peg$c62 = function(group, name, args) {
        return {
          type:"attribute",
          group: group,
          name: name,
          arguments: args || []
        }
      },
      peg$c63 = function(name, args) {
        return {
          type:"attribute",
          name: name,
          arguments: args || []
        }
      },
      peg$c64 = "(",
      peg$c65 = peg$literalExpectation("(", false),
      peg$c66 = ")",
      peg$c67 = peg$literalExpectation(")", false),
      peg$c68 = function(args) {
        return args
      },
      peg$c69 = ",",
      peg$c70 = peg$literalExpectation(",", false),
      peg$c71 = function(argument) {
        return argument
      },
      peg$c72 = ":",
      peg$c73 = peg$literalExpectation(":", false),
      peg$c74 = function(name, value) {
        return {
          type: "keyed_argument",
          name: name,
          value: value
        }
      },
      peg$c75 = function(value) {
        return {
          type: "unkeyed_argument",
          value: value,
        }
      },
      peg$c76 = "[",
      peg$c77 = peg$literalExpectation("[", false),
      peg$c78 = "]",
      peg$c79 = peg$literalExpectation("]", false),
      peg$c80 = function(value) {
        return {
          type: "string_value",
          value: value
        }
      },
      peg$c81 = /^[0-9]/,
      peg$c82 = peg$classExpectation([["0", "9"]], false, false),
      peg$c83 = function(literal) {
        return {
          type: "int_value",
          value: parseInt(literal.join(""), 10)
        }
      },
      peg$c84 = function(literal, decimal) {
        return {
          type: "float_value",
          value: parseFloat(literal.join("") + "."+decimal.join(""), 10)
        }
      },
      peg$c85 = "true",
      peg$c86 = peg$literalExpectation("true", false),
      peg$c87 = "false",
      peg$c88 = peg$literalExpectation("false", false),
      peg$c89 = function(boolean) {
        return {
          type:"boolean_type",
          value: boolean === "true" ? true : false
        }
      },
      peg$c90 = "1/1/19",
      peg$c91 = peg$literalExpectation("1/1/19", false),
      peg$c92 = function() {
        return {
          type: "datetime_value",
          value: new Date()
        }
      },
      peg$c93 = function(name, parameters) {
        return {
          type: "function_value",
          name: name,
          parameters: parameters
        }
      },
      peg$c94 = function(name) {
        return {
          type: "field_value",
          name: name
        }
      },
      peg$c95 = /^[ \t\n\r]/,
      peg$c96 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c97 = peg$otherExpectation("whitespace"),
      peg$c98 = peg$otherExpectation("string"),
      peg$c99 = function(chars) { return chars.join(""); },
      peg$c100 = "\"",
      peg$c101 = peg$literalExpectation("\"", false),
      peg$c102 = "\\",
      peg$c103 = peg$literalExpectation("\\", false),
      peg$c104 = "/",
      peg$c105 = peg$literalExpectation("/", false),
      peg$c106 = "b",
      peg$c107 = peg$literalExpectation("b", false),
      peg$c108 = function() { return "\b"; },
      peg$c109 = "f",
      peg$c110 = peg$literalExpectation("f", false),
      peg$c111 = function() { return "\f"; },
      peg$c112 = "n",
      peg$c113 = peg$literalExpectation("n", false),
      peg$c114 = function() { return "\n"; },
      peg$c115 = "r",
      peg$c116 = peg$literalExpectation("r", false),
      peg$c117 = function() { return "\r"; },
      peg$c118 = "t",
      peg$c119 = peg$literalExpectation("t", false),
      peg$c120 = function() { return "\t"; },
      peg$c121 = "u",
      peg$c122 = peg$literalExpectation("u", false),
      peg$c123 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16));
              },
      peg$c124 = function(sequence) { return sequence; },
      peg$c125 = /^[^\0-\x1F"\\]/,
      peg$c126 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c127 = /^[0-9a-f]/i,
      peg$c128 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseSchema() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseBlockList();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseBlockList();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlockList() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseBlock();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlock() {
    var s0;

    s0 = peg$parseModel();
    if (s0 === peg$FAILED) {
      s0 = peg$parseDatasource();
      if (s0 === peg$FAILED) {
        s0 = peg$parseGenerator();
        if (s0 === peg$FAILED) {
          s0 = peg$parseEnum();
          if (s0 === peg$FAILED) {
            s0 = peg$parseTypeAlias();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseTypeAlias() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s5 = peg$c4;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseDataType();
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parseAttributeList();
                  while (s9 !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$parseAttributeList();
                  }
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c6(s3, s7, s8);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseModel() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c7) {
      s1 = peg$c7;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesp();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c9;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parsePropertyList();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parsePropertyList();
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s9 = peg$c11;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c12); }
                    }
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c13(s3, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePropertyList() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseProperty();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c14(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseProperty() {
    var s0;

    s0 = peg$parseGroupedModelAttribute();
    if (s0 === peg$FAILED) {
      s0 = peg$parseModelAttribute();
      if (s0 === peg$FAILED) {
        s0 = peg$parseField();
      }
    }

    return s0;
  }

  function peg$parseDatasource() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 10) === peg$c15) {
      s1 = peg$c15;
      peg$currPos += 10;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesp();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c9;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parseAssignmentList();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseAssignmentList();
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s9 = peg$c11;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c12); }
                    }
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c17(s3, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGenerator() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 9) === peg$c18) {
      s1 = peg$c18;
      peg$currPos += 9;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesp();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c9;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parseAssignmentList();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseAssignmentList();
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s9 = peg$c11;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c12); }
                    }
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c20(s3, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEnum() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
